removed mouse position

--- a/src/css/buildingLocator.css
+++ b/src/css/buildingLocator.css
@@ -14,6 +14,10 @@
   z-index: 999;
 }
 
-.ol-mouse-position {
-  position: absolute;
+#map {
+  padding-left: 25px;
+}
+
+h1 {
+  padding-left: 8px;
 }
