first draft for showing existing georef; needs improvement

--- a/src/css/buildingLocator.css
+++ b/src/css/buildingLocator.css
@@ -33,3 +33,15 @@ h1 {
   height: 150px;
   width: 100%;
 }
+
+#lvl30 {
+  overflow: auto;
+  height: 150px;
+  width: 100%;
+}
+
+#lvl40 {
+  overflow: auto;
+  height: 150px;
+  width: 100%;
+}
